# kmeans

./: CMakeLists.txt  OpenGLEngine.hpp  README.md  centers.txt  dataset_read.h  main - Copy.cu.tmp  main.cu
Data_random2/point1.txt/__MACOSX/: ._point1.txt
Data_random2/point8.txt/__MACOSX/: ._point8.txt
Src/: CMakeLists.txt
Src/ece285kmeansImages/: CMakeLists.txt  main.cu  main.cu.org
Src/ece285kmeansRandomPoints/: CMakeLists.txt  dataset_read.h  main.cu
Src/ece285kmeansTriangleInequality/: CMakeLists.txt  main.cu
