set(SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
include_directories( ${CMAKE_CURRENT_SOURCE_DIR} )

add_subdirectory(c1_hello)
add_subdirectory(c1_opcode)
add_subdirectory(c1_bandwidthTest)
add_subdirectory(c2_measure_exectime)
add_subdirectory(c2_nsight_dbg)
add_subdirectory(c2_nsight_profile_basic)
add_subdirectory(c3_reduction)
add_subdirectory(c3_shuffle)
add_subdirectory(c4_aos)
add_subdirectory(c4_fp16)
add_subdirectory(c4_global_mem)
add_subdirectory(c5_shared_mem)
add_subdirectory(c6_HSOpticalFlow)
add_subdirectory(c7_constant_mem)
add_subdirectory(c8_simpleGL)
add_subdirectory(c8_simpleSurfaceWrite)
add_subdirectory(c9_dmaTransfer)
add_subdirectory(c9_event_interstream)
add_subdirectory(hw1_radixSort)
add_subdirectory(hw2_sparseMatrixFactorization)
add_subdirectory(hw3_tiledMatrixMultiplication)
add_subdirectory(test)
add_subdirectory(ece285kmeansImages)
add_subdirectory(ece285kmeansRandomPoints)
add_subdirectory(ece285kmeansTriangleInequality)
